--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.0",
+    "@react-navigation/stack": "^6.3.8",
+    "dotenv": "^16.0.3",
     "expo": "~47.0.8",
+    "expo-constants": "~14.0.2",
     "expo-status-bar": "~1.4.2",
+    "firebase": "^9.14.0",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-native": "0.70.5",
+    "react-native-elements": "^3.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
