--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "expo-with-firebase-auth",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -18,7 +17,12 @@
     "firebase": "^9.14.0",
     "react": "18.1.0",
     "react-native": "0.70.5",
-    "react-native-elements": "^3.4.2"
+    "react-native-elements": "^3.4.2",
+    "react-native-google-signin": "^2.1.1",
+    "expo-splash-screen": "~0.17.5",
+    "expo-application": "~5.0.1",
+    "expo-auth-session": "~3.7.3",
+    "expo-random": "~13.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
